--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ jspm_packages/
 cypress/videos
 cypress/screenshots
 allure-results/*
-allure-reports/*
+allure-report/*
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
